<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginimg"
    tools:context=".ui.sign.SignActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="540dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:orientation="vertical"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:gravity="center"
                android:fontFamily="@font/dancingscript"
                android:textStyle="bold"
                android:textSize="40dp">
            </TextView>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email_hint_lower"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded"
                android:inputType="textEmailAddress"
                ></EditText>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password_hint_lower"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/eyeimg"
                android:background="@drawable/rounded"
                android:paddingEnd="12dp" />
            <EditText
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm_password_hint"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/eyeimg"
                android:background="@drawable/rounded"
                android:paddingEnd="12dp" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username_hint"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:background="@drawable/rounded"
                android:inputType="textPersonName"
                ></EditText>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/phone_optional_hint"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded"
                android:inputType="phone"
                ></EditText>
            <Button
                android:id="@+id/signbtn"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="35dp"
                android:background="@drawable/rounded"
                android:text="@string/sign_up_button"></Button>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textSize="12dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"></TextView>
                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_link"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12dp"
                    android:layout_marginLeft="5dp"
                    ></TextView>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>